[tool.poetry]
name = "pigent"
version = "0.1.0"
description = ""
authors = ["SYNCHTHIA <support@synchthia.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pigpio = "^1.78"
rpi-bme280 = "^0.2.4"
smbus2 = "^0.4.2"
tornado = "^6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
